fixed layout problems

--- a/jobmatch/src/main/resources/static/styles/main.css
+++ b/jobmatch/src/main/resources/static/styles/main.css
@@ -10,6 +10,9 @@ html, body {
 
 #wrapper {
     height: 100%;
+    margin-left:20%;
+    width: 80%;
+    position: relative;
 }
 
 header{
@@ -38,7 +41,6 @@ h3{
 }
 
 .headline{
-    padding-left:20%;
     text-align:center;
 }
 
@@ -51,9 +53,11 @@ h3{
     padding-top: 20px;
     float: left;
     width: 20%;
+    position: fixed;
     height: 100%;
     background: #5E5E5E;
     color: white;
+    left: 0;
 }
 
 img.avatar {
@@ -120,7 +124,7 @@ h2.company {
 
 #content{
     float:left;
-    width:75%;
+    width:100%;
     margin-top: 60px;
 }
 
